# robotic-arm-for-chess

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
.tox/.package/: .tox-config1  pyvenv.cfg
.tox/.package/Scripts/: activate  activate.bat  activate.fish  activate.nu
.tox/py38/: .tox-config1
.tox/py38/.pytest_cache/v/cache/: nodeids
.tox/py38/Scripts/: activate  activate.bat  activate.fish  activate.nu
src/Chess_Engine/: Chessengine.py
src/Chessboard_Detection/: Difference_Detection.py  Engine_Interface.py  First_Hog_Test.py
tests/Chess_Engine_Tests/: test_Chessengine.py
