[metadata]
name = robotic-arm-for-chess
description = Robotic arm with integrated chess engine and computer vision to detect a real chess board and play
author = Tobias Lotz, Jean-Luca Becker
license = GNU
license_file = LICENSE

[options]
packages = 
    Chess_Engine
    Chessboard_Detection
install_requires =
    stockfish>=3.2
    scikit-learn>=1.0
    scikit-image>=0.19
    numpy>=1.20
    matplotlib>=3.3
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    tox>=3.25

[options.package_data]
Chess_Engine = py.typed
Chessboard_Detection = py.typed